--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/termii_db
-spring.datasource.username=termii_user
-spring.datasource.password=password
+spring.datasource.username=<sql username>
+spring.datasource.password=<sql password>
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql= true
 spring.jpa.hibernate.ddl-auto=update
